--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Slider</title>
     <link rel="stylesheet" href="./master.css" />
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="./js/jQuery.js"></script>
   </head>
   <body>
     <div class="center">
@@ -25,6 +25,6 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
